--- a/index.html
+++ b/index.html
@@ -9,17 +9,25 @@
     </head>
     <body>
         <header id="mob_topbar" class="visible_sm">
-            <div class="notification" onclick="show_notification()">
-                <strong>9</strong>
-                <em>
-                    New articles
-                </em>
+            <img src="img/menu_button.png" id="menu_button" onclick="show_menu()"/>
+            <img src="img/heading.png" id="title" />
+            <div id="trending_now_dropdown">
+                  <div id="dropdown_content">
+                        TRENDING NOW
+                        <a href="#">
+                              <br/>VMA 2015: Nicky Minja called out Milley Cyrus live on the VMA stage
+                        </a>
+                  </div>
+                  <div id="down_button">
+                        <img src="img/down_arrow.png" alt="" />
+                  </div>
             </div>
-            <div class="menu" role="button" onclick="show_menu()">
-                <i class="material-icons menu" >menu</i>
-            </div>
-            <div class="logo">
-                <img src="img/logo.png" alt="" />
+
+            <div id="new_articles" onclick="show_notification()">
+                <a href="#">
+                    <strong>20</strong> <br/>
+                    <span>NEW ARTICLES</span>
+                </a>
             </div>
         </header>
         <div class="visible_sm" id="back" onclick="hide()">
