Side menus fixed

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                         </a>
                   </div>
                   <div id="down_button">
-                        <img src="img/down_arrow.png" alt="" />
+                        <img src="img/down_arrw.png" alt="" />
                   </div>
             </div>
 
@@ -30,24 +30,166 @@
                 </a>
             </div>
         </header>
+
+        <div class="extra_div">
+            <div class="first">
+                  <div class="logo">
+                        <img src="img/heading.png" alt="" />
+                  </div>
+                  <img id="nicky" src="img/google.jpg" alt=""/>
+                  <div class="trending_now_dropdown">
+                        <div class="dropdown_content">
+                            TRENDING NOW
+                            <a href="#">
+                                <br/>Google has a new logo
+                            </a>
+                        </div>
+                    <span>
+                          <img src="img/down_arrw.png" alt="" />
+                    </span>
+                  </div>
+                  <div id="new_articles"><a href="#"><strong>20</strong> <br/> <span>NEW ARTICLES</span></a></div>
+                  <div class="connects">
+                    <ul>
+                      <li>
+                        <img src="img/fby.png" alt="" />
+                      </li>
+                      <li>
+                        <img src="img/twittery.png" alt="" />
+                      </li>
+                      <li>
+                        <img src="img/youtubey.png" alt="" />
+                      </li>
+                      <li>
+                        <img src="img/subscribey.png" alt="" />
+                      </li>
+                    </ul>
+                  </div>
+            </div>
+            <nav class="menu_2nd">
+              <ul>
+                <li id="login">
+                  <img src="img/user.gif" alt="" />
+                  <span>LOGIN | SIGN UP</span>
+                </li>
+                <li>
+                  <span>HOME</span>
+                  <img src="img/down_arrw_white.png" alt="" />
+                </li>
+                <li>
+                  <span>LONGFORM</span>
+                  <img src="img/down_arrw_white.png" alt="" />
+                </li>
+                <li>
+                  <span>REVIEWS</span>
+                  <img src="img/down_arrw_white.png" alt="" />
+                </li>
+                <li>
+                  <span>VIDEO</span>
+                  <img src="img/down_arrw_white.png" alt="" />
+                </li>
+                <li>
+                  <span>TECH</span>
+                  <img src="img/down_arrw_white.png" alt="" />
+                </li>
+                <li>
+                  <span>SCIENCE</span>
+                  <img src="img/down_arrw_white.png" alt="" />
+                </li>
+                <li>
+                  <span>ENTERTAINMENT</span>
+                  <img src="img/down_arrw_white.png" alt="" />
+                </li>
+                <li>
+                  <span>CARS</span>
+                  <img src="img/down_arrw_white.png" alt="" />
+                </li>
+                <li>
+                  <span>DESIGN</span>
+                  <img src="img/down_arrw_white.png" alt="" />
+                </li>
+                <li>
+                  <span>US WORLD</span>
+                  <img src="img/down_arrw_white.png" alt="" />
+                </li>
+                <li>
+                  <span>FORUMS</span>
+                  <img src="img/down_arrw_white.png" alt="" />
+                </li>
+                <li>
+                  <img src="img/search.png" alt="" />
+                </li>
+              </ul>
+            </nav>
+          </div>
+
         <div class="visible_sm" id="back" onclick="hide()">
 
         </div>
         <section class="side_menu visible_sm" id="hidden_menu">
             <ul>
-                <li class="user"><div class="img"><img src="img/user.gif" alt="" /></div><div class="login">login | sign up</div></li>
-                <li class="home"><img src="img/home.png" alt=""/> home</li>
-                <li class="long"><img src="img/longform.png" alt=""/> longform</li>
-                <li class="review"><img src="img/reviews.png" alt=""/> reviews</li>
-                <li class="video"><img src="img/video.png" alt=""/> video</li>
-                <li class="tech"><img src="img/tech.png" alt=""/> tech</li>
-                <li class="science"><img src="img/science.png" alt=""/> Science</li>
-                <li class="enter"><img src="img/entertainment.png" alt=""/> Entertainment</li>
-                <li class="cars"><img src="img/cars.png" alt=""/> cars</li>
-                <li class="design"><img src="img/design.png" alt=""/> design</li>
-                <li class="us"><img src="img/us_world.png" alt=""/> Us & World</li>
-                <li class="forums"><img src="img/forums.png" alt=""/> forum</li>
-                <li class="search"><img src="img/search.png" alt=""/> search</li>
+                <li id="login">
+                    <img src="img/user.gif" alt="" />
+                    <span>LOGIN | SIGN UP</span>
+                  </li>
+                  <li id="home">
+                    <img src="img/home.png" alt="" />
+                    <span>HOME</span>
+                  </li>
+                  <li id="longform">
+                    <img src="img/longform.png" alt="" />
+                    <span>LONGFORM</span>
+                  </li>
+                  <li id="reviews">
+                    <img src="img/reviews.png" alt="" />
+                    <span>REVIEWS</span>
+                  </li>
+                  <li id="video">
+                    <img src="img/video.png" alt="" />
+                    <span>VIDEO</span>
+                  </li>
+                  <li id="tech">
+                    <img src="img/tech.png" alt="" />
+                    <span>TECH</span>
+                  </li>
+                  <li id="science">
+                    <img src="img/science.png" alt="" />
+                    <span>SCIENCE</span>
+                  </li>
+                  <li id="entertainment">
+                    <img src="img/entertainment.png" alt="" />
+                    <span>ENTERTAINMENT</span>
+                  </li>
+                  <li id="cars">
+                    <img src="img/cars.png" alt="" />
+                    <span>CARS</span>
+                  </li>
+                  <li id="design">
+                    <img src="img/design.png" alt="" />
+                    <span>DESIGN</span>
+                  </li>
+                  <li id="us_world">
+                    <img src="img/us_world.png" alt="" />
+                    <span>US WORLD</span>
+                  </li>
+                  <li id="forums">
+                    <img src="img/forums.png" alt="" />
+                    <span>FORUMS</span>
+                  </li>
+                  <li id="search">
+                    <img src="img/search.png" alt="" />
+                    <span>SEARCH</span>
+                  </li>
+                  <li id="more">
+                    <img src="img/plus.png" alt="" />
+                    <span>MORE SECTIONS</span>
+                  </li>
+                  <li>
+                    <img src="img/fb.png" alt="" />
+                    <img src="img/twitter.gif" alt="" />
+                    <img src="img/youtube.png" alt="" />
+                    <img src="img/subscribe.png" alt="" />
+                  </li>
             </ul>
         </section>
         <section class="notifsm" id="hidden_notif">
