Todays Last commit

--- a/index.html
+++ b/index.html
@@ -3,9 +3,10 @@
     <head>
         <meta charset="utf-8">
         <title>The Verge</title>
+        <link rel="shortcut icon" href="img/icon.png" type="image/x-icon" />
         <link rel="stylesheet" href="css/styles.css" >
         <link href='https://fonts.googleapis.com/css?family=Pathway+Gothic+One' rel='stylesheet' type='text/css'>
-    <script type="text/javascript" src = "js/script.js"></script>
+        <script type="text/javascript" src = "js/script.js"></script>
     </head>
     <body>
         <header id="mob_topbar" class="visible_sm">
@@ -231,7 +232,7 @@
                     <div class="cntnt" id="cntnt1">
 
                     </div>
-                    <h2>Acer's coolest new PC lets you build a computer like Lego bricks</h2>
+                    <h2>Google has new Logo</h2>
                     <p class="byline">
                       By Emily Yoshida
                       <span class="p-comment-count heat3">12</span>
@@ -258,8 +259,366 @@
                 </div>
             </div>
             <div class="row">
+                <div class="post11 post">
+                    <div class="cntnt" id="cntnt4">
+
+                    </div>
+                    <h2>My Brother's Keeper</h2>
+                    <p class="byline">
+                      By Jessie Guy-Ryan
+                      <span class="p-comment-count tagyellow">179</span>
+                    </p>
+                </div>
+                <div class="post11 post">
+                    <div class="cntnt" id="cntnt2">
+
+                    </div>
+                    <h2>Miley Cyrus just torpedoed her own career, and MTV helped</h2>
+                    <p class="byline">
+                      By Emily Yoshida
+                    </p>
+                </div>
+                <div class="post11 post">
+                    <div class="cntnt" id="cntnt3">
+
+                    </div>
+                    <h2>Lenovo has created a Microsoft Surface clone</h2>
+                    <p class="byline">
+                      By Tom Warren
+                      <span class="p-comment-count taggreen">34</span>
+                    </p>
+                </div>
+                <div class="post11 post">
+                    <div class="cntnt" id="cntnt5">
+
+                    </div>
+                    <h2>There are lots of ways to spy on baby monitors</h2>
+                    <p class="byline">
+                      By Ariha Setalved
+                      <span class="p-comment-count taggreen">34</span>
+                    </p>
+                </div>
+            </div>
+            <div class="video1">
+                <div class="videobar">
+                    <img src="img/moto.png" alt="" class="vlogo" />
+                    <div class="heading">
+                        <h2 >MOTO X'S PROMISE <a href="#">WATCH NOW</a></h2>
+                    </div>
+                </div>
+                <div class="post11 videopost">
+                    <div class="cntnt" id="video">
+                        <a href="#"></a>
+                    </div>
+                </div>
+                <div class="subvideo">
+                    <ul>
+                        <li>
+                            <img src="img/moto_360.jpg" alt="" />
+                                <a href="#"></a>
+                            <h4>The new moto 360 watches for 2015</h4>
+                        </li>
+                    </ul>
+                </div>
+                <div class="subvideo">
+                    <ul style="margin-bottom: 0px">
+                        <li><img src="img/z5.jpg" alt="" />
+                            <a href="#"></a>
+                            <h4>Hands on with the new Sony Xperia Z5 family</h4>
+                        </li>
+                    </ul>
+                </div>
+                <div class="see_more">
+                    SEE MORE <a href="#">VIDEOS</a>
+                </div>
+            </div>
+            <div class="news">
+                <ul>
+                    <li>
+                        <img src="img/news1.jpg" alt="" />
+                        <h3>The US egg lobby is afraid of plants</h3>
+                        <h6><strong>Amar Toor </strong> | 41 minutes ago</h6>
+                    </li>
+                    <li>
+                        <img src="img/news2.png" alt="" />
+                        <h3>GLAAD is changing how it tracks LGBT inclusivity on TV</h3>
+                        <h6><strong>Jamieson Cox </strong> | 1 hour ago</h6>
+                    </li>
+                    <li>
+                        <img src="img/news3.jpg" alt="" />
+                        <h3>Samsung unveils its first Ultra HD Blu-ray player</h3>
+                        <h6><strong>James Vincent </strong> | 1 hour ago</h6>
+                    </li>
+                    <li>
+                        <img src="img/news4.jpg" alt="" />
+                        <h3>SmartThing's new hub uses Samsung cameras to monitor your home</h3>
+                        <h6><strong>Lauren </strong> | 2 hour ago</h6>
+                    </li>
+                </ul>
+            </div>
+            <div class="row">
+                <div class="post11 post">
+                    <div class="cntnt" id="cntnt2">
+
+                    </div>
+                    <h2>Miley Cyrus just torpedoed her own career, and MTV helped</h2>
+                    <p class="byline">
+                      By Emily Yoshida
+                    </p>
+                </div>
+                <div class="post11 post">
+                    <div class="cntnt" id="cntnt4">
+
+                    </div>
+                    <h2>My Brother's Keeper</h2>
+                    <p class="byline">
+                      By Jessie Guy-Ryan
+                      <span class="p-comment-count tagyellow">179</span>
+                    </p>
+                </div>
 
             </div>
+            <div class="news">
+                <ul>
+                    <li>
+                        <img src="img/news1.jpg" alt="" />
+                        <h3>The US egg lobby is afraid of plants</h3>
+                        <h6><strong>Amar Toor </strong> | 41 minutes ago</h6>
+                    </li>
+                    <li>
+                        <img src="img/news2.png" alt="" />
+                        <h3>GLAAD is changing how it tracks LGBT inclusivity on TV</h3>
+                        <h6><strong>Jamieson Cox </strong> | 1 hour ago</h6>
+                    </li>
+                    <li>
+                        <img src="img/news3.jpg" alt="" />
+                        <h3>Samsung unveils its first Ultra HD Blu-ray player</h3>
+                        <h6><strong>James Vincent </strong> | 1 hour ago</h6>
+                    </li>
+                    <li>
+                        <img src="img/news4.jpg" alt="" />
+                        <h3>SmartThing's new hub uses Samsung cameras to monitor your home</h3>
+                        <h6><strong>Lauren </strong> | 2 hour ago</h6>
+                    </li>
+                </ul>
+            </div>
+            <div id="from_re">
+                <span>FROM</span>
+                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 422.9 94.8" class="logo"><path d="M29.3 79.8V61.5l-11-10.9 11-11V21.4L0 50.6z" class="shape-1"></path><path d="M393.6 39.6l11.1 11-11.1 10.9v18.3l29.3-29.2-29.3-29.2z" class="shape-2"></path><path d="M139.6 94.8L171.8 0h-13.7l-32.2 94.8z" class="shape-3"></path><path d="M70.8 21c-6.3 0-11.9 2.9-14.7 6.3v-5.6H41.8v58.5h14.6V44.9c0-7.4 4.9-10.8 9.4-10.8 3.6 0 5.5 1.2 7.8 3.5l.1-.1 5.1-15.1c-2.4-1-5-1.4-8-1.4" class="shape-4"></path><path d="M109.6 80.8c2.8 0 5.3-.2 7.5-.7l5.8-17.1c-3.7 3.6-6.8 5.4-13.2 5.4-8.2 0-12.8-5.5-12.8-13h28.6l6.2-18.2c-3.5-9.8-11.6-16.3-23.6-16.3-15.2 0-25.5 10.8-25.5 29.9-.1 23.7 13.2 30 27 30M98.3 39.1c1.6-3.5 4.8-6.1 9.8-6.1 4.9 0 8.2 2.6 9.8 6.1.9 2.1 1.2 3.7 1.3 6.3H96.9c.1-2.6.5-4.2 1.4-6.3" class="shape-5"></path><path fill="#C60018" d="M236 80.8c8.7 0 14.6-3.4 18.2-7.2 5.3-5.5 6.6-12.1 6.6-22.8 0-10.6-1.3-17.2-6.6-22.7-3.6-3.8-9.5-7.2-18.2-7.2-8.6 0-14.5 3.4-18.1 7.2-5.3 5.5-6.6 12.1-6.6 22.7 0 10.7 1.3 17.3 6.6 22.8 3.6 3.8 9.4 7.2 18.1 7.2m-6.8-44.2c1.7-1.7 3.8-2.6 6.7-2.6 2.9 0 5.2.9 6.8 2.6 3 3 3.4 8.1 3.4 14.2s-.3 11.2-3.4 14.3c-1.7 1.7-3.9 2.6-6.8 2.6s-5.1-.9-6.7-2.6c-3-3-3.4-8.2-3.4-14.3s.4-11.1 3.4-14.2" class="shape-6"></path><path fill="#C60018" d="M292.3 80.8c6.2 0 10.4-1.7 14.5-6.2v5.5h14.3V.1h-14.6v26.6c-3.8-4.3-8.3-5.8-14.3-5.8-5.7 0-11 2-14.3 5.3-5.8 5.8-6 15.8-6 24.6s.1 18.9 6 24.7c3.3 3.3 8.7 5.3 14.4 5.3m4.2-46.7c8.8 0 10 7.2 10 16.7s-1.2 16.8-10 16.8-9.9-7.3-9.9-16.8c0-9.6 1.1-16.7 9.9-16.7" class="shape-7"></path><path fill="#C60018" d="M357.8 20.9c-15.2 0-25.5 10.8-25.5 29.9 0 23.7 13.3 30 27.1 30 10.6 0 16.3-3.3 22.2-9.2l-8.9-8.6c-3.7 3.7-6.8 5.5-13.3 5.5-8.2 0-12.8-5.5-12.8-13h36.6V49c.1-16.2-9.1-28.1-25.4-28.1m-11.1 24.5c.1-2.6.4-4.2 1.3-6.3 1.6-3.5 4.8-6.1 9.8-6.1s8.2 2.6 9.8 6.1c.9 2.1 1.2 3.7 1.4 6.3h-22.3z" class="shape-8"></path><path fill="#C60018" d="M190.4 80.8c5.6 0 10.2-1.3 14.2-3.8l-4.7-13.9c-3 3.3-5.6 4.6-9.4 4.6-3.5 0-6.2-1.2-8.3-3.8-2.2-2.8-3.3-6.9-3.3-13s1-10.1 3.3-12.9c2.1-2.6 4.8-3.8 8.3-3.8 3.8 0 6.4 1.3 9.4 4.6l4.8-14c-4-2.5-8.6-3.7-14.2-3.7-4.4 0-9.2.9-13.4 3.2l-12 35.3c3 16.4 15.2 21.2 25.3 21.2" class="shape-9"></path></svg>
+            </div>
+            <div class="news">
+                <ul>
+                    <li>
+                        <img src="img/news5.jpg" alt="" />
+                        <h3>Twitter restructures product team, promotes Jeff Seiberg</h3>
+                        <h6><strong>Amar Toor </strong> | 6 hour ago</h6>
+                    </li>
+                    <li>
+                        <img src="img/news6.png" alt="" />
+                        <h3>Google has a new trick</h3>
+                        <h6><strong>Jamieson Cox </strong> | 6 hour ago</h6>
+                    </li>
+                    <li>
+                        <img src="img/news7.jpg" alt="" />
+                        <h3>A lot of US children are being diagnosed with AHDH improperly</h3>
+                        <h6><strong>James Vincent </strong> | 8 hour ago</h6>
+                    </li>
+                    <li>
+                        <img src="img/news8.png" alt="" />
+                        <h3>Moto X Play review</h3>
+                        <h6><strong>Lauren </strong> | 2 hour ago</h6>
+                    </li>
+                    <li>
+                        <img src="img/news1.jpg" alt="" />
+                        <h3>The US egg lobby is afraid of plants</h3>
+                        <h6><strong>Amar Toor </strong> | 41 minutes ago</h6>
+                    </li>
+                    <li>
+                        <img src="img/news2.png" alt="" />
+                        <h3>GLAAD is changing how it tracks LGBT inclusivity on TV</h3>
+                        <h6><strong>Jamieson Cox </strong> | 1 hour ago</h6>
+                    </li>
+                    <li>
+                        <img src="img/news3.jpg" alt="" />
+                        <h3>Samsung unveils its first Ultra HD Blu-ray player</h3>
+                        <h6><strong>James Vincent </strong> | 1 hour ago</h6>
+                    </li>
+                    <li>
+                        <img src="img/news4.jpg" alt="" />
+                        <h3>SmartThing's new hub uses Samsung cameras to monitor your home</h3>
+                        <h6><strong>Lauren </strong> | 2 hour ago</h6>
+                    </li>
+                </ul>
+            </div>
+            <div class="row">
+                <div class="post11 post">
+                    <div class="cntnt" id="cntnt5">
+
+                    </div>
+                    <h2>There are lots of ways to spy on baby monitors</h2>
+                    <p class="byline">
+                      By Ariha Setalved
+                      <!-- <span class="p-comment-count taggreen">34</span> -->
+                    </p>
+                </div>
+                <div class="post11 post">
+                    <div class="cntnt" id="cntnt6">
+
+                    </div>
+                    <h2>Super Mario Maker is the Wii U's defining Game</h2>
+                    <p class="byline">
+                      By Andrew Webster
+                      <!-- <span class="p-comment-count taggreen">34</span> -->
+                    </p>
+                </div>
+                <div class="post11 post">
+                    <div class="cntnt" id="cntnt4">
+
+                    </div>
+                    <h2>My Brother's Keeper</h2>
+                    <p class="byline">
+                      By Jessie Guy-Ryan
+                      <span class="p-comment-count tagyellow">179</span>
+                    </p>
+                </div>
+                <div class="post11 post">
+                    <div class="cntnt" id="cntnt2">
+
+                    </div>
+                    <h2>Miley Cyrus just torpedoed her own career, and MTV helped</h2>
+                    <p class="byline">
+                      By Emily Yoshida
+                    </p>
+                </div>
+                <div class="post11 post">
+                    <div class="cntnt" id="cntnt3">
+
+                    </div>
+                    <h2>Lenovo has created a Microsoft Surface clone</h2>
+                    <p class="byline">
+                      By Tom Warren
+                      <span class="p-comment-count taggreen">34</span>
+                    </p>
+                </div>
+
+            </div>
+            <div class="news">
+                <ul>
+                    <li>
+                        <img src="img/news5.jpg" alt="" />
+                        <h3>Twitter restructures product team, promotes Jeff Seiberg</h3>
+                        <h6><strong>Amar Toor </strong> | 6 hour ago</h6>
+                    </li>
+                    <li>
+                        <img src="img/news6.png" alt="" />
+                        <h3>Google has a new trick</h3>
+                        <h6><strong>Jamieson Cox </strong> | 6 hour ago</h6>
+                    </li>
+                    <li>
+                        <img src="img/news7.jpg" alt="" />
+                        <h3>A lot of US children are being diagnosed with AHDH improperly</h3>
+                        <h6><strong>James Vincent </strong> | 8 hour ago</h6>
+                    </li>
+                    <li>
+                        <img src="img/news8.png" alt="" />
+                        <h3>Moto X Play review</h3>
+                        <h6><strong>Lauren </strong> | 2 hour ago</h6>
+                    </li>
+                    <li>
+                        <img src="img/news1.jpg" alt="" />
+                        <h3>The US egg lobby is afraid of plants</h3>
+                        <h6><strong>Amar Toor </strong> | 41 minutes ago</h6>
+                    </li>
+                    <li>
+                        <img src="img/news2.png" alt="" />
+                        <h3>GLAAD is changing how it tracks LGBT inclusivity on TV</h3>
+                        <h6><strong>Jamieson Cox </strong> | 1 hour ago</h6>
+                    </li>
+                    <li>
+                        <img src="img/news3.jpg" alt="" />
+                        <h3>Samsung unveils its first Ultra HD Blu-ray player</h3>
+                        <h6><strong>James Vincent </strong> | 1 hour ago</h6>
+                    </li>
+                    <li>
+                        <img src="img/news4.jpg" alt="" />
+                        <h3>SmartThing's new hub uses Samsung cameras to monitor your home</h3>
+                        <h6><strong>Lauren </strong> | 2 hour ago</h6>
+                    </li>
+                    <li>
+                        <img src="img/news5.jpg" alt="" />
+                        <h3>Twitter restructures product team, promotes Jeff Seiberg</h3>
+                        <h6><strong>Amar Toor </strong> | 6 hour ago</h6>
+                    </li>
+                    <li>
+                        <img src="img/news6.png" alt="" />
+                        <h3>Google has a new trick</h3>
+                        <h6><strong>Jamieson Cox </strong> | 6 hour ago</h6>
+                    </li>
+                    <li>
+                        <img src="img/news7.jpg" alt="" />
+                        <h3>A lot of US children are being diagnosed with AHDH improperly</h3>
+                        <h6><strong>James Vincent </strong> | 8 hour ago</h6>
+                    </li>
+                    <li>
+                        <img src="img/news8.png" alt="" />
+                        <h3>Moto X Play review</h3>
+                        <h6><strong>Lauren </strong> | 2 hour ago</h6>
+                    </li>
+                    <li>
+                        <img src="img/news1.jpg" alt="" />
+                        <h3>The US egg lobby is afraid of plants</h3>
+                        <h6><strong>Amar Toor </strong> | 41 minutes ago</h6>
+                    </li>
+                </ul>
+            </div>
+            <div class="see_all_news">
+                SEE ALL NEWS
+            </div>
+            <div class="back_to_top">
+                BACK TO TOP ^
+            </div>
         </section>
+        <footer class="page_footer">
+            <div class="search">
+                <form action="/search" method="GET" class="search">
+                    <input name="q" class="p-input__text -shadow" placeholder="Search articles &amp; products" type="text">
+                </form>
+             </div>
+             <div class="sections">
+                <ul>
+                    <li>Longform</li>
+                    <li>Video</li>
+                    <li>Reviews</li>
+                    <li>Tech</li>
+                    <li>Science</li>
+                    <li>Culture</li>
+                    <li>Cars</li>
+                    <li>Design</li>
+                    <li>Buisiness</li>
+                    <li>US &amp; World</li>
+                </ul>
+              </div>
+
+              <div class="basics">
+                  <ul>
+                    <li>Site Status</li>
+                    <li>About</li>
+                    <li>Contact</li>
+                    <li>Tip us</li>
+                    <li>Forums</li>
+                    <li>Jobs</li>
+                  </ul>
+                </div>
+            <div class="connects">
+                <ul>
+                  <li>Facebook</li>
+                  <li>Twitter</li>
+                  <li>Tumblr</li>
+                  <li>Youtube</li>
+                  <li>Instagram</li>
+                  <li>Subscribe</li>
+                </ul>
+             </div>
+        </footer>
     </body>
 </html>
